[workspace]
resolver = "2"
members = []

[package]
name = "demo"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-fullstack = "0.4.3"
serde = "1.0.197"
# tokio = { version = "1", features = ["full"] }
tokio = { version = "1.36.0", features = ["full", "macros", "rt-multi-thread"], optional = true }

[features]
default = []
ssr = ["tokio", "dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]
# tokio = ["dep:tokio"]
