[workspace]
resolver = "2"
members = []

[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
dioxus-desktop = { version = "0.4.3", optional = true }
dioxus = { version = "0.4.3" }
dioxus-router = { version = "0.4.3" }
dioxus-fullstack = { version = "0.4.3" }
axum = { version = "0.7.4" , optional = true}
tokio = { version = "1.36.0", features = ["full", "macros", "rt-multi-thread"], optional = true }
serde = "1.0.179"

[features]
default = []
server = ["axum", "tokio", "dioxus-fullstack/axum"]
desktop = ["dioxus-desktop"]

[[bin]]
name = "client"
path = "src/client.rs"
required-features = ["desktop"]

[[bin]]
name = "server"
path = "src/server.rs"
required-features = ["server"]